Ya quedo, sigamos con el front end

--- a/backend/mail_whatsapp_send/src/main/resources/messages.properties
+++ b/backend/mail_whatsapp_send/src/main/resources/messages.properties
@@ -5,3 +5,5 @@ email.email=El correo electrónico ingresado no es válido.
 not.blank.message=El mensaje no puede estar vaío. Por favor, ingrese su mensaje.
 http.status.code.error.server=500
 http.status.code.error.server.friendly.message=Ha ocurrido un error inesperado. Por favor, inténtalo de nuevo más tarde.
+http.status.code.error.rate.limit=429
+http.status.code.error.rate.limit.friendly.message=Has alcanzado el límite de solicitudes. Por favor, espera 10 minutos antes de intentarlo nuevamente.
