--- a/backend/mail_whatsapp_send/src/main/resources/messages.properties
+++ b/backend/mail_whatsapp_send/src/main/resources/messages.properties
@@ -1,8 +1,9 @@
 http.status.code.error.validated=400
 http.status.code.error.validated.friendly.message=Uno o más valores ingresados no son válidos. Por favor, verifica la información e inténtalo nuevamente.
 not.blank.name=El nombre no puede estar vacío. Por favor, ingresa tu nombre.
+not.blank.email=El email no puede estar vacío. Por favor, ingresa tu email.
 email.email=El correo electrónico ingresado no es válido.
-not.blank.message=El mensaje no puede estar vaío. Por favor, ingrese su mensaje.
+not.blank.message=El mensaje no puede estar vacío. Por favor, ingrese su mensaje.
 http.status.code.error.server=500
 http.status.code.error.server.friendly.message=Ha ocurrido un error inesperado. Por favor, inténtalo de nuevo más tarde.
 http.status.code.error.rate.limit=429
